--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^12.0.8",
+    "@tryghost/content-api": "^1.6.0",
+    "next": "^12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
